feat(tools): Helix Behaviour Edited
Movement Enhanced , Multiple Commands for Single Manipulation(Clone Line, Float Block Move)

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -49,10 +49,10 @@ file-picker.hidden = false
 # Keys Section
 [keys.insert]
 esc = [":w!", ":fmt", "normal_mode"]   #saves the file in insert mode, formats and quit insert mode
-A-k = "move_line_up"
-A-j = "move_line_down"
-A-l = "move_char_right"
-A-h = "move_char_left"
+C-k = "move_line_up"
+C-j = "move_line_down"
+C-l = "move_char_right"
+C-h = "move_char_left"
 [keys.normal]
 C-A-j = ['ensure_selections_forward', 'extend_to_line_bounds', 'extend_char_right', 'extend_char_left', 'delete_selection', 'add_newline_below', 'move_line_down', 'replace_with_yanked'] # Move lines Upwards even disjoint blocks
 C-A-k = ['ensure_selections_forward', 'extend_to_line_bounds', 'extend_char_right', 'extend_char_left', 'delete_selection', 'move_line_up', 'add_newline_above', 'move_line_up', 'replace_with_yanked'] # Move line Downwards, even disjoint blocks
