--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -20,5 +20,16 @@ sixel_fraction = 15
 ueberzug_scale = 1
 ueberzug_offset = [0, 0, 0, 0]
 
+[opener]
+edit = [
+	{ run = 'helix "$@"', block = true },
+]
+play = [
+	{ run = 'vlc "$@"', orphan = true, for = "unix" },
+]
+open = [
+	{ run = 'xdg-open "$@"', desc = "Open" },
+]
+
 
 
