--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -57,7 +57,7 @@ C-h = "move_char_left"
 C-A-j = ['ensure_selections_forward', 'extend_to_line_bounds', 'extend_char_right', 'extend_char_left', 'delete_selection', 'add_newline_below', 'move_line_down', 'replace_with_yanked'] # Move lines Upwards even disjoint blocks
 C-A-k = ['ensure_selections_forward', 'extend_to_line_bounds', 'extend_char_right', 'extend_char_left', 'delete_selection', 'move_line_up', 'add_newline_above', 'move_line_up', 'replace_with_yanked'] # Move line Downwards, even disjoint blocks
 C-k=":bc"   #kills the current buffer
-C-q=":q!"  #quits helix
+C-q=[":w!",":fmt",":q!"]  #quits helix
 esc=[":w!","collapse_selection", "keep_primary_selection"]  #escapes multiple selection
 # Buffer Movement
 C-left=":bprev"
