modify the kitty config

--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,77 +1,71 @@
-# Tokyo Night color scheme for kitty terminal emulator
-# https://github.com/davidmathers/tokyo-night-kitty-theme
-#
-# Based on Tokyo Night color theme for Visual Studio Code
-# https://github.com/enkia/tokyo-night-vscode-theme
 
-foreground #a9b1d6
-background #24283b
+# The basic colors
+foreground              #FDF500
+background              #000000
+selection_foreground    #000000
+selection_background    #FADA16
 
-# Black
-color0 #414868
-color8 #414868
+# Cursor colors
+cursor                  #FADA16
+cursor_text_color       #FADA16
 
-# Red
-color1 #f7768e
-color9 #f7768e
+# URL underline color when hovering with mouse
+url_color               #FADA16
 
-# Green
-color2  #73daca
-color10 #73daca
+# Kitty window border colors
+active_border_color     #000000
+inactive_border_color   #000000
+bell_border_color       #000000
 
-# Yellow
-color3  #e0af68
-color11 #e0af68
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
 
-# Blue
-color4  #7aa2f7
-color12 #7aa2f7
+# Tab bar colors
+active_tab_foreground   #FADA16
+active_tab_background   #000000
+inactive_tab_foreground #000000
+inactive_tab_background #FADA16
+tab_bar_background      #000000
 
-# Magenta
-color5  #bb9af7
-color13 #bb9af7
+# Colors for marks (marked text in the terminal)
+mark1_foreground #FADA16
+mark1_background #000000
+mark2_foreground #FADA16
+mark2_background #000000
+mark3_foreground #FADA16
+mark3_background #000000
 
-# Cyan
-color6  #7dcfff
-color14 #7dcfff
+# The 16 terminal colors
 
-# White
-color7  #c0caf5
-color15 #c0caf5
+# black
+color0 #1F2229
+color8 #1B1C22
 
-# Cursor
-cursor #c0caf5
-cursor_text_color #1a1b26
+# red
+color1 #D62246
+color9 #EC0101
 
-# Selection highlight
-selection_foreground none
-selection_background #28344a
+# green
+color2  #4DBD4F
+color10 #1F5322
 
-# The color for highlighting URLs on mouse-over
-url_color #9ece6a
+# yellow
+color3  #FDF500
+color11 #F2CB07
 
-# Window borders
-active_border_color #3d59a1
-inactive_border_color #101014
-bell_border_color #e0af68
+# blue
+color4  #F29C6B
+color12 #FFA6C2
 
-# Tab bar
-tab_bar_style fade
-tab_fade 1
-active_tab_foreground   #3d59a1
-active_tab_background   #16161e
-active_tab_font_style   bold
-inactive_tab_foreground #787c99
-inactive_tab_background #16161e
-inactive_tab_font_style bold
-tab_bar_background #101014
+# magenta
+color5  #A56DF2
+color13 #564873
 
-# Title bar
-macos_titlebar_color #16161e
+# cyan
+color6  #2CF6B3
+color14 #37EBF3
 
-# Storm
-# background #24283b
-# cursor_text_color #24283b
-# active_tab_background   #1f2335
-# inactive_tab_background #1f2335
-# macos_titlebar_color #1f2335
+# white
+color7  #E6E6E6
+color15 #FFFFFF
