--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@ font_family      CaskaydiaCove Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-shell /bin/bash
+shell /bin/zsh
 
 font_size 10.5
 window_padding_width 25
