modify terminal apps configs

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -12,9 +12,11 @@ $mainMod = Super # super / meta / windows key
 
 # Assign apps
 $term = wezterm
+$term_alt = kitty
 $editor = helix 
-$file = nautilus
+$file = dolphin
 $browser = firefox
+$spotify = spotify
 
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
@@ -30,7 +32,9 @@ bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar
 
 # Application shortcuts
 bind = $mainMod, T, exec, $term # launch terminal emulator
+bind = $mainMod+Alt, T, exec, $term_alt # launch terminal emulator
 bind = $mainMod, E, exec, $file # launch file manager
+bind = $mainMod, Y, exec, $spotify # launch spotify
 bind = $mainMod, C, exec, $editor # launch text editor
 bind = $mainMod, F, exec, $browser # launch web browser
 bind = Ctrl+Shift, Escape, exec, $scrPath/sysmonlaunch.sh # launch system monitor (htop/btop or fallback to top)
@@ -46,11 +50,11 @@ bindl  = , XF86AudioMicMute, exec, $scrPath/volumecontrol.sh -i m # toggle micro
 bindel = , XF86AudioLowerVolume, exec, $scrPath/volumecontrol.sh -o d # decrease volume
 bindel = , XF86AudioRaiseVolume, exec, $scrPath/volumecontrol.sh -o i # increase volume
 # Custom keybindings for audio and media control
-bindel = Ctrl+$mainMod, Page_Up, exec, $scrPath/volumecontrol.sh -o i # increase volume
-bindel = Ctrl+$mainMod, Page_Down, exec, $scrPath/volumecontrol.sh -o d # decrease volume
-bindel = Ctrl+$mainMod, Right, exec, playerctl next # media next
-bindel = Ctrl+$mainMod, Left, exec, playerctl previous # media previous
-bindel = Ctrl+$mainMod, Space, exec, playerctl play-pause # play/pause music
+bindel = Ctrl+Alt, Page_Up, exec, $scrPath/volumecontrol.sh -o i # increase volume
+bindel = Ctrl+Alt, Page_Down, exec, $scrPath/volumecontrol.sh -o d # decrease volume
+bindel = Ctrl+Alt, Right, exec, playerctl next # media next
+bindel = Ctrl+Alt, Left, exec, playerctl previous # media previous
+bindel = Ctrl+Alt, Space, exec, playerctl play-pause # play/pause music
 
 # Media control
 bindl  = , XF86AudioPlay, exec, playerctl play-pause # toggle between media play and pause
@@ -155,7 +159,7 @@ bindm = $mainMod, X, resizewindow
 
 # Move/Switch to special workspace (scratchpad)
 bind = $mainMod+Alt, S, movetoworkspacesilent, special
-bind = $mainMod, S, togglespecialworkspace,
+bind = $mainMod+Shift, S, togglespecialworkspace,
 
 # Toggle focused window split
 bind = $mainMod, J, togglesplit
