--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -15,7 +15,7 @@ $term = wezterm
 $term_alt = kitty
 $editor = helix 
 $file = dolphin
-$browser = firefox
+$browser = zen-browser
 $spotify = spotify
 
 # Window/Session actions
