add tmux config, nvim plugins for vim-tmux-navigation

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -90,6 +90,10 @@ when = "test $(pwd) = $HOME"
 symbol="  "
 style = "blue"
 
+[php]
+symbol="  "
+style="purple"
+
 [lua]
 symbol = "  "
 style = "blue"
