--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -60,8 +60,8 @@ set -g allow-rename off
 # Status bar
 #TODO: Theme
 set -g @catppuccin_flavour 'mocha' # latte or frappe, macchiato, mocha
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_left_separator " █"
+set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_middle_separator "|"
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_default_fill "number"
@@ -70,15 +70,14 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
 set -g @catppuccin_status_modules_right "directory date_time"
 set -g @catppuccin_window_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_left_separator  " █"
+set -g @catppuccin_status_right_separator "█ "
 set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
 set -g @catppuccin_date_time_text "%H:%M"
-
 set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_status_modules_right "application session user battery"
 
