lots of updates
mainly zed(settings, snippets), tmux(theme, binds), zshrc(removed binds)

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
+
 # Mouse support and terminal
 set -g mouse on
 set -g default-terminal "tmux-256color"
+set -sg terminal-overrides ",*:RGB"
 
 # Base index and renumbering
 set -g base-index 1
@@ -8,14 +10,17 @@ set -g pane-base-index 1
 set -g set-clipboard on
 set -g renumber-windows on
 
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
+
 set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
+# session switcher 
+set -g @sessionx-bind 'S'
+
 # Custom prefix
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
+
 
 # Reload config
 unbind r
@@ -35,12 +40,16 @@ bind l select-pane -R
 unbind x
 bind x kill-pane
 
+# kill current session
+unbind X
+bind X confirm-before -p "Kill current session? (y/n)" kill-session
+
 # Zoom pane
 unbind z
 bind z resize-pane -Z
 
 # Rotate panes
-bind s rotate-window
+bind R rotate-window
 
 # Copy mode
 unbind c
@@ -55,44 +64,75 @@ bind Tab next-window
 
 # Automatic renaming
 set -g automatic-rename
-set -g allow-rename off
+set-option -g allow-rename off
 
-# Status bar
+#NOTE: Custom Theme
+# # ---------- Status Bar Style ----------
+# set -g status-style "bg=colour235,fg=white"
+#
+# # ---------- Left Section: Path ----------
+# set -g status-left-length 60
+# set -g status-left "#[fg=black,bg=green,bold]  #{b:pane_current_path} #[fg=green,bg=colour235,nobold]"
+#
+# # ---------- Right Section: Session | Time ----------
+# set -g status-right-length 80
+# set -g status-right "#[fg=blue,bg=colour235,nobold]#[fg=black,bg=blue,bold]  #S #[fg=green,bg=blue,nobold]#[fg=black,bg=green,bold]  %H:%M "
+#
+# # ---------- Window Titles ----------
+# # Inactive windows: minimal, soft colors
+# set -g window-status-format " #[fg=white,bg=colour238] #I|#W#{?window_zoomed_flag, (),} #[bg=colour235]"
+#
+# # Active (current) window: high contrast, focused
+# set -g window-status-current-format "#[fg=black,bg=magenta,bold] #I|#W#{?window_zoomed_flag, (),} #[fg=magenta,bg=colour235,nobold]"
+#
+# # Window status styles
+# set -g window-status-style "fg=colour250,bg=colour235"
+# set -g window-status-current-style "#{?window_zoomed_flag,fg=black,bg=yellow,bg=magenta,nobold}"
+# setw -g window-status-bell-style "fg=yellow,bg=red,bold"
+#
+# ---------- Pane Borders ----------
+set -g pane-border-lines "simple"
+set -g pane-border-style "fg=blue,bg=default"
+set -g pane-active-border-style "fg=black,bg=blue,bold"
+
+
 #TODO: Theme
 set -g @catppuccin_flavour 'mocha' # latte or frappe, macchiato, mocha
-set -g @catppuccin_window_left_separator " █"
-set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_middle_separator "|"
-set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+set -g @catppuccin_window_current_text " #W#{?window_zoomed_flag,(),}"
 set -g @catppuccin_status_modules_right "directory date_time"
 set -g @catppuccin_window_modules_left "session"
-set -g @catppuccin_status_left_separator  " █"
-set -g @catppuccin_status_right_separator "█ "
+set -g @catppuccin_status_left_separator  "█"
+set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
 set -g @catppuccin_date_time_text "%H:%M"
 set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_status_modules_right "application session user battery"
 
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'omerxx/catppuccin-tmux'
+set -g @plugin 'omerxx/tmux-session-manager'
+set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'omerxx/tmux-session-manager'
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'xamut/tmux-weather'
+# set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @plugin 'xamut/tmux-weather'
 
 # TPM initialization
 run '~/.tmux/plugins/tpm/tpm'
